--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 # Unix/Linux and OSX temporary files
 *~
 
+# Unix/Linux hidden files
+.*
+
+# NetBeans
+/nbproject/private/
+nbproject
+
+# Elipse
+/.settings/
+
